servicedeskApp/eapli.base (20210331)/eapli.base/base.grammars/src/main/java/script/antl4Gen/ScriptParser.java
// Generated from /Users/ruimarinho/OneDrive - Instituto Superior de Engenharia do Porto/ISEP_2020_2021/LAPR4/REPO/lei20_21_s4_2na_2/eapli.base (20210331)/eapli.base/base.grammars/src/main/java/scriptformulario/grammar/Script.g4 by ANTLR 4.9.1
package script.antl4Gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, Println=3, Print=4, Assert=5, SendEmail=6, CreateEmail=7, 
		Find=8, Replace=9, Match=10, Matcher=11, If=12, Else=13, Do=14, End=15, 
		Null=16, Or=17, And=18, Equals=19, NEquals=20, GTEquals=21, LTEquals=22, 
		Excl=23, GT=24, LT=25, Add=26, Subtract=27, Multiply=28, Divide=29, Modulus=30, 
		OParen=31, CParen=32, SColon=33, Assign=34, Comma=35, Bool=36, Date=37, 
		Number=38, Identificador=39, String=40, Comment=41, Space=42;
	public static final int
		RULE_parse = 0, RULE_bloco = 1, RULE_linha = 2, RULE_declaracao = 3, RULE_comando = 4, 
		RULE_ifBloco = 5, RULE_ifCondicional = 6, RULE_elseCondicional = 7, RULE_idList = 8, 
		RULE_expressao = 9, RULE_indexes = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "bloco", "linha", "declaracao", "comando", "ifBloco", "ifCondicional", 
			"elseCondicional", "idList", "expressao", "indexes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'println'", "'print'", "'assert'", "'sendemail'", 
			"'createemail'", "'find'", "'replace'", "'match'", "'$'", "'if'", "'else'", 
			"'do'", "'end'", "'null'", "'||'", "'&&'", "'=='", "'!='", "'>='", "'<='", 
			"'!'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", 
			"';'", "'='", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "Println", "Print", "Assert", "SendEmail", "CreateEmail", 
			"Find", "Replace", "Match", "Matcher", "If", "Else", "Do", "End", "Null", 
			"Or", "And", "Equals", "NEquals", "GTEquals", "LTEquals", "Excl", "GT", 
			"LT", "Add", "Subtract", "Multiply", "Divide", "Modulus", "OParen", "CParen", 
			"SColon", "Assign", "Comma", "Bool", "Date", "Number", "Identificador", 
			"String", "Comment", "Space"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Script.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ScriptParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			bloco();
			setState(23);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public List<LinhaContext> linha() {
			return getRuleContexts(LinhaContext.class);
		}
		public LinhaContext linha(int i) {
			return getRuleContext(LinhaContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Println) | (1L << Print) | (1L << Assert) | (1L << SendEmail) | (1L << Find) | (1L << Replace) | (1L << Match) | (1L << If) | (1L << Identificador))) != 0)) {
				{
				{
				setState(25);
				linha();
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinhaContext extends ParserRuleContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public TerminalNode SColon() { return getToken(ScriptParser.SColon, 0); }
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public IfBlocoContext ifBloco() {
			return getRuleContext(IfBlocoContext.class,0);
		}
		public LinhaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linha; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterLinha(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitLinha(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitLinha(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinhaContext linha() throws RecognitionException {
		LinhaContext _localctx = new LinhaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_linha);
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identificador:
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				declaracao();
				setState(32);
				match(SColon);
				}
				break;
			case Println:
			case Print:
			case Assert:
			case SendEmail:
			case Find:
			case Replace:
			case Match:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				comando();
				setState(35);
				match(SColon);
				}
				break;
			case If:
				enterOuterAlt(_localctx, 3);
				{
				setState(37);
				ifBloco();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode Identificador() { return getToken(ScriptParser.Identificador, 0); }
		public TerminalNode Assign() { return getToken(ScriptParser.Assign, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(Identificador);
			setState(41);
			match(Assign);
			setState(42);
			expressao(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
	 
		public ComandoContext() { }
		public void copyFrom(ComandoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssertComandoContext extends ComandoContext {
		public TerminalNode Assert() { return getToken(ScriptParser.Assert, 0); }
		public TerminalNode OParen() { return getToken(ScriptParser.OParen, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode CParen() { return getToken(ScriptParser.CParen, 0); }
		public AssertComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterAssertComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitAssertComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitAssertComando(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintComandoContext extends ComandoContext {
		public TerminalNode Print() { return getToken(ScriptParser.Print, 0); }
		public TerminalNode OParen() { return getToken(ScriptParser.OParen, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode CParen() { return getToken(ScriptParser.CParen, 0); }
		public PrintComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterPrintComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitPrintComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitPrintComando(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SendEmailComandoContext extends ComandoContext {
		public TerminalNode SendEmail() { return getToken(ScriptParser.SendEmail, 0); }
		public TerminalNode OParen() { return getToken(ScriptParser.OParen, 0); }
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(ScriptParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(ScriptParser.Comma, i);
		}
		public TerminalNode CParen() { return getToken(ScriptParser.CParen, 0); }
		public SendEmailComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterSendEmailComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitSendEmailComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitSendEmailComando(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FindComandoContext extends ComandoContext {
		public TerminalNode Find() { return getToken(ScriptParser.Find, 0); }
		public TerminalNode OParen() { return getToken(ScriptParser.OParen, 0); }
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(ScriptParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(ScriptParser.Comma, i);
		}
		public TerminalNode CParen() { return getToken(ScriptParser.CParen, 0); }
		public FindComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterFindComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitFindComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitFindComando(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReplaceComandoContext extends ComandoContext {
		public TerminalNode Replace() { return getToken(ScriptParser.Replace, 0); }
		public TerminalNode OParen() { return getToken(ScriptParser.OParen, 0); }
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(ScriptParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(ScriptParser.Comma, i);
		}
		public TerminalNode CParen() { return getToken(ScriptParser.CParen, 0); }
		public ReplaceComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterReplaceComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitReplaceComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitReplaceComando(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MatchComandoContext extends ComandoContext {
		public TerminalNode Match() { return getToken(ScriptParser.Match, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public MatchComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterMatchComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitMatchComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitMatchComando(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintlnComandoContext extends ComandoContext {
		public TerminalNode Println() { return getToken(ScriptParser.Println, 0); }
		public TerminalNode OParen() { return getToken(ScriptParser.OParen, 0); }
		public TerminalNode CParen() { return getToken(ScriptParser.CParen, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public PrintlnComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterPrintlnComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitPrintlnComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitPrintlnComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comando);
		int _la;
		try {
			int _alt;
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Println:
				_localctx = new PrintlnComandoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				match(Println);
				setState(45);
				match(OParen);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Println) | (1L << Print) | (1L << Assert) | (1L << SendEmail) | (1L << Find) | (1L << Replace) | (1L << Match) | (1L << Null) | (1L << OParen) | (1L << Bool) | (1L << Date) | (1L << Number) | (1L << Identificador) | (1L << String))) != 0)) {
					{
					setState(46);
					expressao(0);
					}
				}

				setState(49);
				match(CParen);
				}
				break;
			case Print:
				_localctx = new PrintComandoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				match(Print);
				setState(51);
				match(OParen);
				setState(52);
				expressao(0);
				setState(53);
				match(CParen);
				}
				break;
			case Assert:
				_localctx = new AssertComandoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				match(Assert);
				setState(56);
				match(OParen);
				setState(57);
				expressao(0);
				setState(58);
				match(CParen);
				}
				break;
			case SendEmail:
				_localctx = new SendEmailComandoContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				match(SendEmail);
				setState(61);
				match(OParen);
				setState(62);
				expressao(0);
				setState(63);
				match(Comma);
				setState(64);
				expressao(0);
				setState(65);
				match(Comma);
				setState(66);
				expressao(0);
				setState(67);
				match(CParen);
				}
				break;
			case Find:
				_localctx = new FindComandoContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				match(Find);
				setState(70);
				match(OParen);
				setState(71);
				expressao(0);
				setState(72);
				match(Comma);
				setState(73);
				expressao(0);
				setState(74);
				match(Comma);
				setState(75);
				expressao(0);
				setState(76);
				match(Comma);
				setState(77);
				expressao(0);
				setState(78);
				match(Comma);
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(79);
						expressao(0);
						setState(80);
						match(Comma);
						}
						} 
					}
					setState(86);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(87);
				expressao(0);
				setState(88);
				match(CParen);
				}
				break;
			case Replace:
				_localctx = new ReplaceComandoContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				match(Replace);
				setState(91);
				match(OParen);
				setState(92);
				expressao(0);
				setState(93);
				match(Comma);
				setState(94);
				expressao(0);
				setState(95);
				match(Comma);
				setState(96);
				expressao(0);
				setState(97);
				match(CParen);
				}
				break;
			case Match:
				_localctx = new MatchComandoContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				match(Match);
				{
				setState(100);
				expressao(0);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfBlocoContext extends ParserRuleContext {
		public IfCondicionalContext ifCondicional() {
			return getRuleContext(IfCondicionalContext.class,0);
		}
		public TerminalNode End() { return getToken(ScriptParser.End, 0); }
		public ElseCondicionalContext elseCondicional() {
			return getRuleContext(ElseCondicionalContext.class,0);
		}
		public IfBlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifBloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterIfBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitIfBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitIfBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfBlocoContext ifBloco() throws RecognitionException {
		IfBlocoContext _localctx = new IfBlocoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifBloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			ifCondicional();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(104);
				elseCondicional();
				}
			}

			setState(107);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfCondicionalContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(ScriptParser.If, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode Do() { return getToken(ScriptParser.Do, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public IfCondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifCondicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterIfCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitIfCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitIfCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfCondicionalContext ifCondicional() throws RecognitionException {
		IfCondicionalContext _localctx = new IfCondicionalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifCondicional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(If);
			setState(110);
			expressao(0);
			setState(111);
			match(Do);
			setState(112);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseCondicionalContext extends ParserRuleContext {
		public TerminalNode Else() { return getToken(ScriptParser.Else, 0); }
		public TerminalNode Do() { return getToken(ScriptParser.Do, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ElseCondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseCondicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).enterElseCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptListener ) ((ScriptListener)listener).exitElseCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptVisitor ) return ((ScriptVisitor<? extends T>)visitor).visitElseCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseCondicionalContext elseCondicional() throws RecognitionException {
		ElseCondicionalContext _localctx = new ElseCondicionalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elseCondicional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(Else);
			setState(115);
			match(Do);
			setState(116);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
